<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/generate_markers"
            android:textSize="@dimen/textSize"
            android:id="@+id/button_generate_markers"
            android:layout_weight="1"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/remove_markers"
            android:textSize="@dimen/textSize"
            android:id="@+id/button_remove_markers_big"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/remove_50_markers"
            android:textSize="@dimen/textSize"
            android:id="@+id/button_remove_50_markers"
            android:layout_weight="1"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/clusterization_off"
            android:textSize="@dimen/textSize"
            android:textColor="@android:color/darker_gray"
            android:id="@+id/button_clusterization"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:text="@string/clean_map"
            android:id="@+id/button_clean_map"
            android:layout_weight="1"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hide_markers"
            android:textSize="@dimen/textSize"
            android:id="@+id/button_hide_markers"
            android:layout_weight="1"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_markers"
        android:textSize="@dimen/textSize"
        android:id="@+id/button_show_markers" />



    <com.huawei.hms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        map:mapType="normal"
        map:uiCompass="true"
        map:uiZoomControls="true"
        />

</LinearLayout>